2005-09-17  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gnome-vfs-port.c (vport_seek): Fix GCC 4.0 warnings.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gnome-vfs.defs-type-ignores (GnomeVFSMimeAction)
	(GnomeVFSMimeActionType):
	* gnome/overrides/gnome-vfs.defs
	(gnome_vfs_mime_id_in_application_list)
	(gnome_vfs_mime_id_in_component_list)
	(gnome_vfs_mime_action_launch)
	(gnome_vfs_mime_action_launch_with_env)
	(gnome_vfs_mime_get_all_desktop_entries)
	(gnome_vfs_application_is_user_owned_application)
	(gnome_vfs_mime_get_default_action_type)
	(gnome_vfs_mime_get_default_action)
	(gnome_vfs_mime_get_icon)
	(gnome_vfs_mime_application_new_from_id)
	(gnome_vfs_mime_get_default_desktop_entry): Ignored, because they
	are deprecated in 2.8 and this API doesn't have users.

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* glib-checks.ac: 
	* defs-checks.ac: Versioned pkg-config check

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-10-16  Andy Wingo  <wingo@pobox.com>

	* package.ac: Require gnome-vfs-2.0 >= 2.8.0.

2004-10-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gnome-vfs-spec.scm (wrap-value-cg): Throw to
	'gnome-vfs-error with the specific kind of error as an argument.
	* gnome/gw/gnome-vfs-support.h (RESULT_ERROR): Same.

	* gnome/overrides/gnome-vfs.defs (gnome_vfs_result_to_string):
	Define as a function, not a method.

2004-10-10  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/Makefile.am (module_DATA): Dist the
	type-ignores.

	* gnome/overrides/gnome-vfs.defs: Adjust the prototypes of the