@@ -4,4 +4,11 @@ AC_SUBST(GNOME_VFS_CFLAGS)
 AC_SUBST(GNOME_VFS_LIBS)
 AM_CONDITIONAL(HAVE_GNOME_VFS, $HAVE_GNOME_VFS)
 
+if $DISABLE_DEPRECATED; then
+  GNOME_VFS_DEPRECATED_CFLAGS=-DGNOME_VFS_DISABLE_DEPRECATED
+else
+  GNOME_VFS_DEPRECATED_CFLAGS=
+fi
+AC_SUBST(GNOME_VFS_DEPRECATED_CFLAGS)
+
 record_check gnome-vfs $HAVE_GNOME_VFS
